  buffer with soft wrap on.

- Selecting "Search in Directory" from the file system browser's
  Commands menu with a file selected was supposed to set the directory
  search filter to that file's extension, however this didn't work.

- Fix a problem with "Indent Selected Lines" on text like the following:

    if(foo)
        bar();
    if(baz) {
        quux();
    }
}}}
{{{ API Additions

- Added a new dynamic menu API, so that plugins using the 4.2 plugin API
  can provide dynamic menus. Simply write an implementation of
  org.gjt.sp.jedit.menu.DynamicMenuProvider

- EditPlugin.start() is always called from the AWT thread now.

- Added a method to bsh.NameSpace:

  addCommandPath(String path, Class clas)

  You can call this on BeanShell.getNameSpace(). BeanShell will search
  for resources named path + methodName + ".bsh" in the class loader of
  the given class when an undeclared method is invoked. Plugins can use
  this to provide additional scripting commands, the Console plugin uses
  this for example.

- Added a new method to TextAreaExtension class:

  public void paintScreenLineRange(Graphics2D gfx, int firstLine,
    int lastLine, int[] physicalLines, int[] start, int[] end,
    int y, int lineHeight)

  This method paints a whole bunch of lines at once, instead of one at a
  time, so it should be more efficient for plugins like Background and
  ErrorList.

  See javadoc for parameter documentation.

- Added long-missing DefaultInputHandler.removeKeyBinding() method.

- Added AbstractOptionPane.addComponent(Component comp, int fill)
  method.

- Virtual file systems can now show arbitriary columns in the file
  system browser.

  - Use the VFS constructor that accepts a String[] of extended
    attribute names. You can use the canned names (EA_TYPE, EA_STATUS,
    EA_SIZE, EA_MODIFIED) or add your own. If you add your own, you
    must also define properties "vfs.browser.<extended attribute name>".
