@@ -1,13 +1,0 @@
-<html><body>
-The action bar can provide quick keyboard access to editor features which do not have explicit keyboard shortcuts. Examples:
-
-<ul>
-<li><b>C+ENTER</b> <code>l-o</code> (automatically completed to
-<code>global-options</code>)
-<li><b>C+ENTER</b> <code>w-v</code> (automatically completed to
-<code>new-view</code>)
-<li><b>C+ENTER</b> <code>buffer.tabSize=4</code>
-<li><b>C+ENTER</b> <code>vfs.browser.dock-position=left</code>
-<li><b>C+ENTER</b> <code>vfs.browser.shortcut=F3</code>
-<li><b>C+ENTER</b> <code>view.fontsize=14</code>
-</body></html>
